# multifolding-poc

./: Cargo.toml  README.md  TODO.md
sage-helpers/: README.md  v_j.sage
src/: ccs.rs  lcccs.rs  lib.rs  multifolding.rs  pedersen.rs  prover.rs
src/ccs/: cccs.rs  ccs.rs  hypercube.rs  lcccs.rs  mle.rs  mod.rs  pedersen.rs  util.rs
src/espresso/: mod.rs  multilinear_polynomial.rs  util.rs  virtual_polynomial.rs
src/espresso/sum_check/: mod.rs  prover.rs  structs.rs  verifier.rs
src/util/: hypercube.rs  mle.rs  mod.rs  vec.rs
