[package]
name = "hypernova-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = {version="^0.4.0", features=["parallel"]}
ark-poly = {version="^0.4.0", features=["parallel"]}
ark-ec = "^0.4.0"
ark-serialize = "0.4.2"
ark-std = { version = "^0.4.0", features=["parallel"] }
displaydoc = "0.2.4"
rayon = "1.7.0"
thiserror = "1.0.40"

# import for poly_iop & transcript
subroutines = {git="https://github.com/EspressoSystems/hyperplonk"}
transcript = {git="https://github.com/EspressoSystems/hyperplonk"}

[features]
# default = [ "parallel", "print-trace" ]
default = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = [ ]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    ]
print-trace = [ 
    "ark-std/print-trace",
    ] 
